Fix clipping of bouncing arrow

--- a/app/sass/sections/header/main.sass
+++ b/app/sass/sections/header/main.sass
@@ -65,6 +65,7 @@ $header-section-background: #2196f3
       bottom: 0
 
       text-align: center
+      overflow: visible
 
       i
         display: block
